fix menu collapsing

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,7 @@
     position: relative;
     height: 960px;
     width: 100%;
+    min-width: 1200px;
 }
 
 .header {
